<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.BreedProfileActivity">

    <TextView
        android:id="@+id/txtLabelTemperament"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/label_temperament"
        app:layout_constraintStart_toStartOf="@+id/txtLabelGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelOrigin" />

    <TextView
        android:id="@+id/txtOriginValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="2"
        android:text="@string/default_empty_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLabelOrigin"
        app:layout_constraintTop_toTopOf="@+id/txtLabelOrigin"
        tools:text="@tools:sample/lorem[5]" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        tools:listitem="@layout/breed_image" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="@+id/imgBack"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/txtGroupValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="2"
        android:text="@string/default_empty_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLabelGroup"
        app:layout_constraintTop_toTopOf="@+id/txtLabelGroup"
        tools:text="@tools:sample/lorem[5]" />

    <TextView
        android:id="@+id/txtTemperamentValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/default_empty_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLabelTemperament"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelTemperament"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@tools:sample/lorem[100]" />

    <TextView
        android:id="@+id/txtLabelGroup"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/label_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/txtLabelOrigin"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/label_origin"
        app:layout_constraintStart_toStartOf="@+id/txtLabelGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>